福島Project/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>震災時の住所（市町村名）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Furigana__c</fullName>
        <inlineHelpText>全角カタカナで入力してください。（姓と名の間に全角スペース）を入れてください。</inlineHelpText>
        <label>フリガナ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HojuMoto_Rodosya__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>補充労働者の場合に、補充元の労働者を設定する</description>
        <label>補充元労働者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>取引先責任者</relationshipLabel>
        <relationshipName>Contacth1Vx</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JigyoshoCD__c</fullName>
        <label>事業所コード</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JigyoshoMei__c</fullName>
        <description>グローバル検索用</description>
        <label>事業所名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ketsuban__c</fullName>
        <defaultValue>false</defaultValue>
        <description>申請取り止めになるとチェックが入る
（離職時にはチェックは入らない）</description>
        <label>欠番</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KoyoHokenHokensyaNO__c</fullName>
        <label>雇用保険被保険者番号</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KoyoKBN__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>雇用区分</label>
        <referenceTo>JFK_CommonM__c</referenceTo>
        <relationshipLabel>取引先責任者</relationshipLabel>
        <relationshipName>KoyoKBNs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KoyoKeitai_HenkoBi__c</fullName>
        <label>雇用形態変更日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KoyoKeitai__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>雇用形態</label>
        <referenceTo>JFK_CommonM__c</referenceTo>
        <relationshipLabel>雇用形態</relationshipLabel>
        <relationshipName>RodoJikans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KoyoKeiyaku_KaishiBi__c</fullName>
        <label>雇用契約開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KoyoKeiyaku_SyuryoBi__c</fullName>
        <label>雇用契約終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KoyoSyurui__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>雇用種類</label>
        <referenceTo>JFK_CommonM__c</referenceTo>
        <relationshipLabel>雇用種類</relationshipLabel>
        <relationshipName>KoyoSyuruis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RisyokuBi__c</fullName>
        <label>離職日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RisyokuRiyu__c</fullName>
        <label>離職理由</label>
        <picklist>
            <picklistValues>
                <fullName>自己都合</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>事業主都合</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RodosyaCD__c</fullName>
        <externalId>true</externalId>
        <label>労働者コード</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RodosyaNO__c</fullName>
        <description>労働者番号（事業所内での番号）です。</description>
        <externalId>true</externalId>
        <label>労働者番号</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seibetsu__c</fullName>
        <label>性別</label>
        <picklist>
            <picklistValues>
                <fullName>男</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>女</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShinseiGaku__c</fullName>
        <label>申請額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Syikyu_KaishiBi__c</fullName>
        <description>支給が開始された日付</description>
        <label>支給開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Syuryo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1年目2回目以降に何らかの理由で支給対象外となった場合にチェックを入れる</description>
        <label>終了</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TokkiJiko__c</fullName>
        <label>特記事項</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>YatoiIre_Nengappi__c</fullName>
        <label>雇入れ年月日</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>RodosyaNO__c</columns>
        <columns>KoyoHokenHokensyaNO__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>KoyoKeiyaku_KaishiBi__c</columns>
        <columns>KoyoKeiyaku_SyuryoBi__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべてのユーザー</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <validationRules>
        <fullName>Contact_chkDate</fullName>
        <active>true</active>
        <errorConditionFormula>KoyoKeiyaku_KaishiBi__c &gt; KoyoKeiyaku_SyuryoBi__c</errorConditionFormula>
        <errorDisplayField>KoyoKeiyaku_KaishiBi__c</errorDisplayField>
        <errorMessage>日付の大小に誤りがあります。</errorMessage>
    </validationRules>
</CustomObject>